--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@ body{
   
 }
 h1{
-  size: 20px;
+  font-size: 20px;
 }
 p{
-  size: 12px;
+  font-size: 12px;
   color: green;
 }
 
@@ -16,4 +16,8 @@ p{
   border-width: 2px;
   width: 100px;
   height: 100px;
+}
+
+ul {
+  list-style-type: square;
 }
