--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
-body{
+body {
   background-color: black;
-  color:white;
-  
+  color:white; 
 }
-h1{
+
+h1 {
   font-size: 20px;
 }
-p{
+
+p {
   font-size: 12px;
   color: green;
 }
@@ -20,4 +21,8 @@ p{
 
 ul {
   list-style-type: square;
+}
+
+ol {
+  list-style-type: upper-alpha;
 }
