--- a/wframes/wframe.css
+++ b/wframes/wframe.css
@@ -12,8 +12,23 @@ body {
     vertical-align: middle;
 }
 
+h1 {
+    text-align: left;
+}
+
 .leftAlign {
     text-align: left;
     margin-left: 20px;
     float: left;
+}
+
+input {
+    width:100%;
+    height: 400px;
+    background-color: rgb(207, 207, 207);
+}
+
+input[type='text']::-webkit-input-placeholder {
+    position: absolute;
+    top: 10px;
 }
